<resources>
    <string name="app_name">Marwadi Shaadi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view">View</string>
    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>
    <string-array name="children_array">
        <item>Yes</item>
        <item>No</item>
        <item>Doesn\'t Matter</item>
    </string-array>
    <string name="q1">Can I change any or all of the profile information while modifying my profile?</string>
    <string name="a1">You can change most of the information in your profile. However, some fields cannot be changed like first name, surname, date of birth and gender. Please be careful while you input this information in the registration form. You may contact the Customer Service team in case you require assistance regarding the same.</string>
    <string name="q2">Will I be searchable online through Google, Yahoo etc?</string>
    <string name="a2">No. We will show your full name only to registered users of Marwadi Shaadi, and your profile will not be discoverable through search engines by searching your full name.</string>
    <string name="q3">Are there any tips to make a matrimonial profile more popular?</string>
    <string name="a3">There are several things you can do to improve your chances of getting contacted.</string>
    <string name="a31">\u2022\tAdd an attractive recent photo of yourself to your profile. This is the single most effective step you can take to generate high viewership and also be featured in "Photos only" search results.</string>
    <string name="a32">\u2022\tTake time to fill your Personal Profile as accurately and completely as possible.</string>
    <string name="a33">\u2022\tSpend time writing more about your qualitative aspects - aspirations and goals, attitude towards life, your family and your hobbies. Remember, people want to know more about yourself before they decide to express interest in you.</string>
    <string name="a34">\u2022\tAdd your Partner Profile. If you do not have a Partner Profile, others viewing your profile will not know what kind of partner you are looking for. So, specify the qualities that you are looking for in your mate. Do not be unnecessarily restrictive in your choices. Make multiple selections within a category, if need be.</string>
    <string name="q4">Can I deactivate my matrimonial profile temporarily?</string>
    <string name="a4">Yes, you can from settings.</string>
    <string name="q5">What is Marwadi Shaadi online chat facility?</string>
    <string name="a5">With todays hectic lifestyle it becomes difficult for people to keep in touch and Marwadi Shaadi Messenger is a great 21st century way to meet and get to know your choosen one online. It is simple to use. Every time you log on to Marwadi Shaadi, you are automatically logged on to Marwadi Shaadi Messenger. You are visible on chat and can be contacted by a premium member who can initiate a chat with you. You can respond and take the conversation further if you are a premium member</string>
    <string name="q6">What are the advantages of premium membership?</string>
    <string name="a6">A Premium Membership means a paid membership to marwadihaadi.com. We have various packages and options to help you access advanced features of Marwadi Shaadi. A Premium Membership helps you find an ideal matrimony partner quickly and easily.
        \n\n\u2022\tPremium Members can View verified contact details of other members and can register on various sub-castes as compared to free members who can register on only one sub-caste.
        \n\n\u2022\tPremium Matrimonial Members can express interest and write messages to other members of Marwadi Shaadi Matrimonial.
        \n\n\u2022\tPremium Members can avail additional privacy settings for their phone, photo, display name and horoscope
        \n\n\u2022\tPremium Members will be allowed to view horoscope details of other profiles
        \n\n\u2022\tThey can send their profile information along with the initial message written when expressing interest in another member which helps in increasing responses.
        \n\n\u2022\tFurther, they are free to communicate with all other members who have accepted their initiation.
        \n\n\u2022\tOur data shows that the chances of finding a partner increase 12 times if a member upgrades to a premium membership. Premium members can also avail of special offers from Marwadi Shaadi that may not be available to free members.</string>
    <string name="q7">Can I avail discounts while purchasing premium membership?</string>
    <string name="a7">Marwadi Shaadi Matrimonial offers discounts to new Premium Membership registrations from time to time as part of its ongoing promotion plan. If you have received a promotional code you can enter it while placing your order and receive your discount. If not, we may not have any promotions running currently.</string>
    <string name="q8">Is online Credit Card Payment on Marwadi Shaadi secure?</string>
    <string name="a8">Yes, 100% Secure! Your credit card information is entered on a Secure Server using SSL Technology and 128 Bit Encryption which is one of the highest levels of security provided by websites. The information is transmitted in an encrypted fashion to our payment gateway and your card is charged online. Finally, to provide the highest level of security, we do not store your credit card information on our online server at any time.</string>
    <string name="q9">How long does it take to activate my matrimonial account after I place an order?</string>
    <string name="a9">If you pay for the order using a credit card, then the account is activated within 12 hours.</string>
    <string name="payment1">1. CC Avenue Pyment gateway accepts the following:</string>
    <string name="payment11">Credit Card: American Express / Diners Club Card / JCB Card</string>
    <string name="payment12">Debit Card: Mastercard / VISA Debit Cards of all major Banks.</string>
    <string name="payment13">Net Banking: Net Banking Of all major Banks.</string>
    <string name="payment14">Cash Cards: Done Card / Itz Card / noQ 24x7.</string>
    <string name="payment2">2. Cash Pick Up</string>
    <string name="payment3">3. Demand Draft</string>
    <string name="payment4">4. RTGS</string>
    <string name="payment5">5. Cash/Cheque/DD Deposit. Our Bank account details are as follows:</string>
    <string name="payment51">Name : Marwadi Shaadi Matrimonial Services\nBank Name : Axis Bank\nBranch : Utalsar, Thane (W)\nA/c No. : 912020018030211\nIFSC : UTIB0000509</string>
    <string name="payment52">Cash deposit will attract extra charges.</string>
    <string name="address">Shop No. 11\nGovardhan Dham\nOpp. New ST Stand\nThane - 400 601\nMaharashtra, India.</string>
    <string name="telephone">+91 902 211 2277\n+91 808 030 8628\n+91 730 393 8665\n+91 902 290 3322</string>
    <string name="fax">+91 022 2534 2786</string>
    <string name="email">info@marwadishaadi.com\nregistrations@marwadishaadi.com</string>
    <string name="skype">marwadi.shaadi</string>
    <string name="refund1">Marwadi Shaadi offers a 100% refund if members do not get any response within 60 days. To be eligible for the refund, members should fulfill the following:</string>
    <string name="refund2">1. Upload atleast one photo.</string>
    <string name="refund3">2. Contact a minimum of 50 members.</string>
    <string name="refund4">3. Log in to your account consistently for 30 days.</string>
    <string name="refund5">Inspite of fulfilling these requirements.</string>
    <string name="refund6">1. If members do not get a reply to their Personalised Messages.</string>
    <string name="refund7">2. If members are not contacted by other members.</string>
    <string name="refund8">3. If members do not view or take any verified contact numbers.</string>
    <string name="refund9">4. If others do not view or take your contact number.</string>
    <string name="privacy1">Marwadishaadi.com is an online matrimonial portal endeavouring constantly to provide all Marwadis with premium matrimonial services under one roof. Our commitment to your right to privacy extends beyond this privacy statement wherein we value the information we collect from you and keep it completely confidential.</string>
    <string name="privacy2">We gather information from members and guests who apply for the matrimonial services our site offers. It includes email address, first name, last name, a user-specified password, mailing address, zip code and telephone number or fax number. Apart from these, we may also collect some detailed information about your interests and background to help you find a better match.</string>
    <string name="privacy3">We collect information from our clients primarily to ensure that we are able to fulfill your requirements and to deliver a personalised experience so that the matchmaking process becomes easier and fulfilling for you.</string>
    <string name="privacy4">The information collected from our clients is shared only with members of Marwadishaadi.com or members of our partners. Any information you give us is held with the utmost care and security. We are also bound to cooperate fully should a situation arise where we are required by law or legal process to provide information about a customer.</string>
    <string name="privacy5">The marwadishaadi.com team will contact you from time to time to acquaint you with various features and functionalities of the website. They will contact you for either "Service" or "Sales" through a variety of media like E-mail, SMS, MMS, Voice IVR, USSD, WAP messages, Telephonic Calls, etc. The calls made to you will be from a regular mobile or landline number which is not of the "140" series.</string>
    <string name="privacy6">We may change this Privacy Policy from time to time based on your comments or as a result of a change of policy in our company. If you have any questions regarding our Privacy Statement, please write in to admin@marwadishaadi.com</string>
    <string name="terms">1. Marwadi Shaadi Matrimonial Services is a partnership firm based in Thane, Mumbai\n\n2. Personal Details and Photos are not verified by the website on personal basis. Members/Users are  requested to make thorough inquiries before proceeding any further.\n\n3. Marwadi Shaadi would not be liable for any kind of claims / compensation arising out of post-marriage accidents, divorce or similar unfortunate events.</string>
</resources>